--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
-  "name": "nodejs-merge-excel-xlsx-files-example",
+  "name": "xlsx-example",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
+  "license": "MIT",
+  "scripts": {},
+  "devDependencies": {
+    "cloudmersive-convert-api-client": "^1.2.7"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Cloudmersive/Nodejs-Merge-Excel-XLSX-Files-Example.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Cloudmersive/Nodejs-Merge-Excel-XLSX-Files-Example/issues"
-  },
-  "homepage": "https://github.com/Cloudmersive/Nodejs-Merge-Excel-XLSX-Files-Example#readme"
+  "dependencies": {}
 }
